Error messages alignment issue fixed for vendor invitation in vendor report page.

--- a/src/app/dashboard/vendor-reports/vendor-reports.component.css
+++ b/src/app/dashboard/vendor-reports/vendor-reports.component.css
@@ -18,3 +18,7 @@
 .custome-response-css{
 	margin: -8px 0px 10px 0px;
 }
+
+>>> .error-message{
+	text-align: left;
+}
